abstraction, pre & post operations queues, deQueue instead of Stack, logger, another changes.